--- a/swak-starter/pom.xml
+++ b/swak-starter/pom.xml
@@ -3,14 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.swak</groupId>
+		<groupId>com.github.618lf</groupId>
 		<artifactId>swak</artifactId>
 		<version>1.0.0_final</version>
 	</parent>
 	<artifactId>swak-starter</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-core</artifactId>
 		</dependency>
 
@@ -34,62 +34,62 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-flux</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-vertx</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-jdbc</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-redis</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-http</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-motan</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-mq</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-rocketmq</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-quartz</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-template</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-mongodb</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-rxtx</artifactId>
 			<scope>provided</scope>
 		</dependency>
