--- a/swak-lib/pom.xml
+++ b/swak-lib/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.swak</groupId>
+    <groupId>com.github.618lf</groupId>
     <artifactId>swak</artifactId>
     <version>1.0.0_final</version>
   </parent>
