--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -3,14 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.swak</groupId>
+		<groupId>com.github.618lf</groupId>
 		<artifactId>swak</artifactId>
 		<version>1.0.0_final</version>
 	</parent>
 	<artifactId>swak-test</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-starter</artifactId>
 		</dependency>
 		<dependency>
@@ -24,42 +24,42 @@
 			<version>${junit.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-actuator</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-redis</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-mq</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-metrics</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-http</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-mongodb</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-vertx</artifactId>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-jdbc</artifactId>
 			<scope>provided</scope>
 		</dependency>
