--- a/swak-tools/pom.xml
+++ b/swak-tools/pom.xml
@@ -3,18 +3,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.swak</groupId>
+		<groupId>com.github.618lf</groupId>
 		<artifactId>swak</artifactId>
 		<version>1.0.0_final</version>
 	</parent>
 	<artifactId>swak-tools</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-starter</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-fx</artifactId>
 		</dependency>
 		<dependency>
@@ -34,7 +34,7 @@
 			<version>${mssql-jdbc.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-template</artifactId>
 		</dependency>
 		<dependency>
