--- a/swak-vertx/pom.xml
+++ b/swak-vertx/pom.xml
@@ -3,14 +3,14 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.swak</groupId>
+		<groupId>com.github.618lf</groupId>
 		<artifactId>swak</artifactId>
 		<version>1.0.0_final</version>
 	</parent>
 	<artifactId>swak-vertx</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>com.swak</groupId>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-core</artifactId>
 		</dependency>
 		<dependency>
@@ -99,7 +99,7 @@
 			<version>${freemarker.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- <dependency> <groupId>com.swak</groupId> <artifactId>swak-kotlin</artifactId> 
+		<!-- <dependency> <groupId>com.github.618lf</groupId> <artifactId>swak-kotlin</artifactId> 
 			<scope>provided</scope> </dependency> -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
