--- a/swak-dubbo/pom.xml
+++ b/swak-dubbo/pom.xml
@@ -9,13 +9,9 @@
 	</parent>
 	<artifactId>swak-dubbo</artifactId>
 	<properties>
-		<jcache_version>1.0.0</jcache_version>
-		<kryo_serializers_version>0.42</kryo_serializers_version>
-		<metrics_version>2.0.1</metrics_version>
-		<zookeeper_version>3.4.13</zookeeper_version>
-		<curator_version>4.0.1</curator_version>
-		<validation_version>1.1.0.Final</validation_version>
-		<snakeyaml_version>1.20</snakeyaml_version>
+		<dubbo.version>2.7.7</dubbo.version>
+		<curator.version>5.1.0</curator.version>
+		<zookeeper.version>3.6.1</zookeeper.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -25,7 +21,57 @@
 		<dependency>
 			<groupId>org.apache.dubbo</groupId>
 			<artifactId>dubbo</artifactId>
-			<version>2.7.6</version>
+			<version>${dubbo.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.dubbo</groupId>
+			<artifactId>dubbo-spring-boot-starter</artifactId>
+			<version>${dubbo.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-framework</artifactId>
+			<version>${curator.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.zookeeper</groupId>
+					<artifactId>zookeeper</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.curator</groupId>
+			<artifactId>curator-recipes</artifactId>
+			<version>${curator.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.apache.zookeeper</groupId>
+					<artifactId>zookeeper</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>${zookeeper.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-handler</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-transport-native-epoll</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 </project>
