--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.swak</groupId>
@@ -42,7 +43,7 @@
 		<spring.version>5.1.8.RELEASE</spring.version>
 		<cglib.version>3.2.12</cglib.version>
 		<javassist.version>3.25.0-GA</javassist.version>
-        <fastjson.version>1.2.60</fastjson.version>
+		<fastjson.version>1.2.60</fastjson.version>
 		<logback.version>1.2.3</logback.version>
 		<slf4j.version>1.7.26</slf4j.version>
 		<netty.version>4.1.37.Final</netty.version>
@@ -75,8 +76,8 @@
 		<freemarker.version>2.3.28</freemarker.version>
 		<rabbitmq.version>5.7.2</rabbitmq.version>
 		<rocketmq.version>4.5.1</rocketmq.version>
-        <lombok.version>1.18.8</lombok.version>
-        
+		<lombok.version>1.18.8</lombok.version>
+
 		<!-- test -->
 		<junit.version>4.12</junit.version>
 
@@ -92,6 +93,15 @@
 		<maven.version>3.5.4</maven.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.version>${project.version}</project.version>
+
+		<!-- plugin setting -->
+		<lombok-maven-plugin>1.18.10.0</lombok-maven-plugin>
+		<maven-compiler-plugin>3.8.1</maven-compiler-plugin>
+		<maven-surefire-plugin>3.0.0-M4</maven-surefire-plugin>
+		<maven-source-plugin>3.2.0</maven-source-plugin>
+		<maven-assembly-plugin>3.2.0</maven-assembly-plugin>
+		<maven-jar-plugin>3.2.0</maven-jar-plugin>
+		<build-helper-maven-plugin>3.1.0</build-helper-maven-plugin>
 	</properties>
 	<repositories>
 		<repository>
@@ -222,26 +232,13 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<distributionManagement>
-		<repository>
-			<id>nexus-releases</id>
-			<name>Team Nesus Release Repository</name>
-			<url>http://192.168.0.222:7001/nexus/content/repositories/releases/</url>
-		</repository>
-		<snapshotRepository>
-			<id>nexus-snapshots</id>
-			<name>Team Nesus Snapshot Repository</name>
-			<url>http://192.168.0.222:7001/nexus/content/repositories/snapshots/</url>
-		</snapshotRepository>
-	</distributionManagement>
-
 	<!-- 插件配置 -->
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok-maven-plugin</artifactId>
-				<version>1.18.10.0</version>
+				<version>${lombok-maven-plugin}</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
@@ -254,7 +251,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>${maven-compiler-plugin}</version>
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
@@ -264,7 +261,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M4</version>
+				<version>${maven-surefire-plugin}</version>
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
@@ -272,7 +269,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>${maven-source-plugin}</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -311,6 +308,7 @@
 					<include>**/*.factories</include>
 					<include>**/*.db</include>
 					<include>**/*.jceks</include>
+					<include>**/*.jav</include>
 				</includes>
 				<filtering>false</filtering>
 			</resource>
