--- a/swak-dubbo/pom.xml
+++ b/swak-dubbo/pom.xml
@@ -12,6 +12,7 @@
 		<dubbo.version>2.7.7</dubbo.version>
 		<curator.version>5.1.0</curator.version>
 		<zookeeper.version>3.6.1</zookeeper.version>
+		<seata.version>1.3.0</seata.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -70,6 +71,17 @@
 				<exclusion>
 					<groupId>org.slf4j</groupId>
 					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>io.seata</groupId>
+			<artifactId>seata-all</artifactId>
+			<version>${seata.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-webmvc</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
