--- a/swak-redis/pom.xml
+++ b/swak-redis/pom.xml
@@ -88,5 +88,10 @@
 			<artifactId>kryo-shaded</artifactId>
 			<version>${kryo.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>3.13.3</version>
+		</dependency>
 	</dependencies>
 </project>
