--- a/swak-jdbc-async/pom.xml
+++ b/swak-jdbc-async/pom.xml
@@ -14,14 +14,30 @@
 			<artifactId>swak-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.github.618lf</groupId>
-			<artifactId>swak-kotlin</artifactId>
-			<exclusions>
-				<exclusion>
-					<groupId>org.jetbrains.kotlinx</groupId>
-					<artifactId>kotlinx-coroutines-reactor</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-stdlib-jdk8</artifactId>
+			<version>${kotlin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-core</artifactId>
+			<version>${kotlin.coroutines.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-jdk8</artifactId>
+			<version>${kotlin.coroutines.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlinx</groupId>
+			<artifactId>kotlinx-coroutines-reactor</artifactId>
+			<version>${kotlin.coroutines.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-test</artifactId>
+			<version>${kotlin.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.github.jasync-sql</groupId>
