添加 hazelcast 的示例代码，感觉可以做机器状态监控，分布式日志处理，本地缓存

--- a/swak-starter/pom.xml
+++ b/swak-starter/pom.xml
@@ -98,6 +98,11 @@
 			<artifactId>swak-zookeeper</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.618lf</groupId>
+			<artifactId>swak-hazelcast</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
