--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<module>swak-tools</module>
 		<module>swak-dubbo-async</module>
 		<module>swak-zookeeper</module>
+		<module>swak-hazelcast</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.3.3.RELEASE</spring-boot.version>
@@ -82,6 +83,7 @@
 		<curator.version>5.1.0</curator.version>
 		<zookeeper.version>3.6.1</zookeeper.version>
 		<seata.version>1.3.0</seata.version>
+		<hazelcast.version>4.0.3</hazelcast.version>
 
 		<!-- test -->
 		<junit.version>4.13</junit.version>
@@ -213,6 +215,11 @@
 			<dependency>
 				<groupId>com.github.618lf</groupId>
 				<artifactId>swak-zookeeper</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.618lf</groupId>
+				<artifactId>swak-hazelcast</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
