jar 升级，添加对异步sql处理的支持

--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -55,6 +55,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.618lf</groupId>
+			<artifactId>swak-jdbc-async</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-vertx</artifactId>
 			<scope>provided</scope>
 		</dependency>
