--- a/pom.xml
+++ b/pom.xml
@@ -41,45 +41,45 @@
 		<module>swak-hazelcast</module>
 	</modules>
 	<properties>
-		<spring-boot.version>2.3.3.RELEASE</spring-boot.version>
-		<spring.version>5.2.8.RELEASE</spring.version>
+		<spring-boot.version>2.3.4.RELEASE</spring-boot.version>
+		<spring.version>5.2.9.RELEASE</spring.version>
 		<cglib.version>3.3.0</cglib.version>
 		<javassist.version>3.27.0-GA</javassist.version>
-		<aspectjweaver.version>1.9.5</aspectjweaver.version>
-		<fastjson.version>1.2.70</fastjson.version>
+		<aspectjweaver.version>1.9.6</aspectjweaver.version>
+		<fastjson.version>1.2.73</fastjson.version>
 		<logback.version>1.2.3</logback.version>
 		<slf4j.version>1.7.30</slf4j.version>
-		<netty.version>4.1.51.Final</netty.version>
-		<reactor.version>3.3.4.RELEASE</reactor.version>
-		<micrometer.version>1.4.1</micrometer.version>
+		<netty.version>4.1.52.Final</netty.version>
+		<reactor.version>3.3.10.RELEASE</reactor.version>
+		<micrometer.version>1.5.5</micrometer.version>
 		<HdrHistogram.version>2.1.12</HdrHistogram.version>
-		<ehcache.version>3.8.1</ehcache.version>
-		<lettuce.version>5.2.2.RELEASE</lettuce.version>
+		<ehcache.version>3.9.0</ehcache.version>
+		<lettuce.version>5.3.4.RELEASE</lettuce.version>
 		<kryo.version>4.0.2</kryo.version>
-		<kotlin.version>1.3.71</kotlin.version>
-		<kotlin.coroutines.version>1.3.5</kotlin.coroutines.version>
-		<groovy.version>3.0.2</groovy.version>
-		<mybatis.version>3.5.4</mybatis.version>
-		<mybatis-spring.version>2.0.4</mybatis-spring.version>
-		<druid.version>1.1.21</druid.version>
-		<HikariCP.version>3.4.2</HikariCP.version>
-		<async.httpclient.version>2.11.0</async.httpclient.version>
+		<kotlin.version>1.4.0</kotlin.version>
+		<kotlin.coroutines.version>1.3.9</kotlin.coroutines.version>
+		<groovy.version>3.0.6</groovy.version>
+		<mybatis.version>3.5.5</mybatis.version>
+		<mybatis-spring.version>2.0.5</mybatis-spring.version>
+		<druid.version>1.1.24</druid.version>
+		<HikariCP.version>3.4.5</HikariCP.version>
+		<async.httpclient.version>2.12.1</async.httpclient.version>
 		<motan.version>1.1.8</motan.version>
-		<vertx.version>3.9.0</vertx.version>
+		<vertx.version>3.9.3</vertx.version>
 		<qrcode.version>3.4.0</qrcode.version>
 		<javapoet.version>1.12.1</javapoet.version>
 		<zkclient.version>0.11</zkclient.version>
-		<metrics.version>4.1.5</metrics.version>
+		<metrics.version>4.1.12.1</metrics.version>
 		<quartz.version>2.3.2</quartz.version>
 		<jcef.version>1.0</jcef.version>
 		<poi.version>4.1.2</poi.version>
 		<guava.version>21.0</guava.version>
 		<controlsfx.version>8.40.16</controlsfx.version>
 		<freemarker.version>2.3.30</freemarker.version>
-		<rabbitmq.version>5.8.0</rabbitmq.version>
-		<rocketmq.version>4.7.0</rocketmq.version>
+		<rabbitmq.version>5.9.0</rabbitmq.version>
+		<rocketmq.version>4.7.1</rocketmq.version>
 		<lombok.version>1.18.12</lombok.version>
-		<dubbo.version>2.7.7</dubbo.version>
+		<dubbo.version>2.7.8</dubbo.version>
 		<curator.version>5.1.0</curator.version>
 		<zookeeper.version>3.6.1</zookeeper.version>
 		<seata.version>1.3.0</seata.version>
@@ -145,6 +145,11 @@
 			<dependency>
 				<groupId>com.github.618lf</groupId>
 				<artifactId>swak-jdbc</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.618lf</groupId>
+				<artifactId>swak-jdbc-async</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
