--- a/swak-jdbc-async/pom.xml
+++ b/swak-jdbc-async/pom.xml
@@ -14,99 +14,8 @@
 			<artifactId>swak-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-stdlib-jdk8</artifactId>
-			<version>${kotlin.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlinx</groupId>
-			<artifactId>kotlinx-coroutines-core</artifactId>
-			<version>${kotlin.coroutines.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlinx</groupId>
-			<artifactId>kotlinx-coroutines-jdk8</artifactId>
-			<version>${kotlin.coroutines.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlinx</groupId>
-			<artifactId>kotlinx-coroutines-reactor</artifactId>
-			<version>${kotlin.coroutines.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-test</artifactId>
-			<version>${kotlin.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.github.jasync-sql</groupId>
-			<artifactId>jasync-mysql</artifactId>
-			<version>${jasync.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.jetbrains.kotlin</groupId>
-					<artifactId>kotlin-stdlib-jdk8</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.jetbrains.kotlinx</groupId>
-					<artifactId>kotlinx-coroutines-core</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-common</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-buffer</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-transport</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-handler</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-handler-proxy</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-codec</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-codec-http</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-codec-http2</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-resolver</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-resolver-dns</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-transport-native-epoll</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>io.netty</groupId>
-					<artifactId>netty-transport-native-kqueue</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-
-		<!-- 使用jasync 客户端 -->
-		<dependency>
 			<groupId>io.vertx</groupId>
-			<artifactId>vertx-mysql-postgresql-client-jasync</artifactId>
+			<artifactId>vertx-mysql-client</artifactId>
 			<version>${vertx.version}</version>
 			<exclusions>
 				<exclusion>
@@ -117,16 +26,51 @@
 					<groupId>io.vertx</groupId>
 					<artifactId>vertx-shell</artifactId>
 				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.github.618lf</groupId>
+			<artifactId>swak-vertx</artifactId>
+			<scope>provided</scope>
+			<exclusions>
 				<exclusion>
-					<groupId>com.github.jasync-sql</groupId>
-					<artifactId>jasync-postgresql</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>com.github.jasync-sql</groupId>
-					<artifactId>jasync-mysql</artifactId>
+					<groupId>io.vertx</groupId>
+					<artifactId>vertx-web</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- <dependency> <groupId>org.jetbrains.kotlin</groupId> <artifactId>kotlin-stdlib-jdk8</artifactId> 
+			<version>${kotlin.version}</version> </dependency> <dependency> <groupId>org.jetbrains.kotlinx</groupId> 
+			<artifactId>kotlinx-coroutines-core</artifactId> <version>${kotlin.coroutines.version}</version> 
+			</dependency> <dependency> <groupId>org.jetbrains.kotlinx</groupId> <artifactId>kotlinx-coroutines-jdk8</artifactId> 
+			<version>${kotlin.coroutines.version}</version> </dependency> <dependency> 
+			<groupId>org.jetbrains.kotlinx</groupId> <artifactId>kotlinx-coroutines-reactor</artifactId> 
+			<version>${kotlin.coroutines.version}</version> </dependency> <dependency> 
+			<groupId>org.jetbrains.kotlin</groupId> <artifactId>kotlin-test</artifactId> 
+			<version>${kotlin.version}</version> <scope>test</scope> </dependency> <dependency> 
+			<groupId>com.github.jasync-sql</groupId> <artifactId>jasync-mysql</artifactId> 
+			<version>${jasync.version}</version> <exclusions> <exclusion> <groupId>org.jetbrains.kotlin</groupId> 
+			<artifactId>kotlin-stdlib-jdk8</artifactId> </exclusion> <exclusion> <groupId>org.jetbrains.kotlinx</groupId> 
+			<artifactId>kotlinx-coroutines-core</artifactId> </exclusion> <exclusion> 
+			<groupId>io.netty</groupId> <artifactId>netty-common</artifactId> </exclusion> 
+			<exclusion> <groupId>io.netty</groupId> <artifactId>netty-buffer</artifactId> 
+			</exclusion> <exclusion> <groupId>io.netty</groupId> <artifactId>netty-transport</artifactId> 
+			</exclusion> <exclusion> <groupId>io.netty</groupId> <artifactId>netty-handler</artifactId> 
+			</exclusion> <exclusion> <groupId>io.netty</groupId> <artifactId>netty-handler-proxy</artifactId> 
+			</exclusion> <exclusion> <groupId>io.netty</groupId> <artifactId>netty-codec</artifactId> 
+			</exclusion> <exclusion> <groupId>io.netty</groupId> <artifactId>netty-codec-http</artifactId> 
+			</exclusion> <exclusion> <groupId>io.netty</groupId> <artifactId>netty-codec-http2</artifactId> 
+			</exclusion> <exclusion> <groupId>io.netty</groupId> <artifactId>netty-resolver</artifactId> 
+			</exclusion> <exclusion> <groupId>io.netty</groupId> <artifactId>netty-resolver-dns</artifactId> 
+			</exclusion> <exclusion> <groupId>io.netty</groupId> <artifactId>netty-transport-native-epoll</artifactId> 
+			</exclusion> <exclusion> <groupId>io.netty</groupId> <artifactId>netty-transport-native-kqueue</artifactId> 
+			</exclusion> </exclusions> </dependency> <dependency> <groupId>io.vertx</groupId> 
+			<artifactId>vertx-mysql-postgresql-client-jasync</artifactId> <version>${vertx.version}</version> 
+			<exclusions> <exclusion> <groupId>io.vertx</groupId> <artifactId>vertx-core</artifactId> 
+			</exclusion> <exclusion> <groupId>io.vertx</groupId> <artifactId>vertx-shell</artifactId> 
+			</exclusion> <exclusion> <groupId>com.github.jasync-sql</groupId> <artifactId>jasync-postgresql</artifactId> 
+			</exclusion> <exclusion> <groupId>com.github.jasync-sql</groupId> <artifactId>jasync-mysql</artifactId> 
+			</exclusion> </exclusions> </dependency> -->
 		<!-- <dependency> <groupId>com.github.jasync-sql</groupId> <artifactId>jasync-postgresql</artifactId> 
 			<version>${jasync.version}</version> <exclusions> <exclusion> <groupId>io.netty</groupId> 
 			<artifactId>netty-common</artifactId> </exclusion> <exclusion> <groupId>io.netty</groupId> 
