--- a/swak-jdbc-async/pom.xml
+++ b/swak-jdbc-async/pom.xml
@@ -14,6 +14,10 @@
 			<artifactId>swak-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.github.618lf</groupId>
+			<artifactId>swak-jdbc</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-mysql-client</artifactId>
 			<version>${vertx.version}</version>
