--- a/swak-starter/pom.xml
+++ b/swak-starter/pom.xml
@@ -50,6 +50,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.github.618lf</groupId>
+			<artifactId>swak-jdbc-async</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-redis</artifactId>
 			<scope>provided</scope>
 		</dependency>
