--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.github.618lf</groupId>
+				<artifactId>swak-groovy</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.github.618lf</groupId>
 				<artifactId>swak-jdbc</artifactId>
 				<version>${project.version}</version>
 			</dependency>
