--- a/swak-jdbc/pom.xml
+++ b/swak-jdbc/pom.xml
@@ -117,5 +117,10 @@
 			<artifactId>mssql-jdbc</artifactId>
 			<version>${mssql-jdbc.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>p6spy</groupId>
+			<artifactId>p6spy</artifactId>
+			<version>3.9.1</version>
+		</dependency>
 	</dependencies>
 </project>
