--- a/swak-jdbc/pom.xml
+++ b/swak-jdbc/pom.xml
@@ -59,6 +59,11 @@
 			<version>${HikariCP.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>${mssql-jdbc.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql-jdbc.version}</version>
