图片绘制的优化

--- a/swak-test/pom.xml
+++ b/swak-test/pom.xml
@@ -79,6 +79,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.github.618lf</groupId>
+			<artifactId>swak-qrcode</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
