--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,11 @@
 				<artifactId>swak-hazelcast</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.github.618lf</groupId>
+				<artifactId>swak-qrcode</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 
 			<!-- 测试 -->
 			<dependency>
