--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,9 @@
 	<artifactId>swak</artifactId>
 	<version>1.1.0_final</version>
 	<packaging>pom</packaging>
+	<name>swak</name>
+	<description>reactive server</description>
+	<url>https://github.com/618lf/swak.git</url>
 	<modules>
 		<module>swak-core</module>
 		<module>swak-flux</module>
