--- a/swak-mq/pom.xml
+++ b/swak-mq/pom.xml
@@ -19,6 +19,11 @@
 			<version>${rabbitmq.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-client</artifactId>
+			<version>${activemq.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>com.github.618lf</groupId>
 			<artifactId>swak-redis</artifactId>
 			<scope>provided</scope>
