--- a/swak-qrcode/pom.xml
+++ b/swak-qrcode/pom.xml
@@ -17,5 +17,11 @@
 			<artifactId>core</artifactId>
 			<version>${qrcode.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
