--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
 		<zookeeper.version>3.6.1</zookeeper.version>
 		<seata.version>1.3.0</seata.version>
 		<hazelcast.version>4.0.3</hazelcast.version>
+		<kafka.version>2.1.1</kafka.version>
 
 		<!-- test -->
 		<junit.version>4.13</junit.version>
